# ansible-k8s-api

./: .dockerignore  .env  Dockerfile  Dockerfile.celery  README.md  clusters.db  database.py  docker-celery.sh  docker-compose.yml  docker.sh  pyproject.toml  requirements.txt  requirements.yaml  sql.py
app/: main.py  secrets.py
app/database/: models.py
app/dependencies/: __init__.py  database.py  k8s.py
app/routers/: __init__.py  auth.py  configmaps.py
app/services/: k8s_ops.py
app/web/templates/: base.html  login.html  resource_table.html
