[project]
name = "ansible-k8s-api"
version = "0.1.0"  # 使用动态版本管理工具如 `bumpver` 时可改为动态获取
description = "Kubernetes Operator API Service powered by Ansible"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Systems Administration"
]
keywords = ["kubernetes", "ansible", "devops"]

dependencies = [
    # 核心依赖
    "fastapi >=0.109.2, <0.110",
    "uvicorn[standard] >=0.27.1, <0.28",
    "python-dotenv >=1.0.1, <2.0",
    "httpx >=0.27.0, <0.28",

    # 异步任务队列
    "celery[redis] >=5.3.6, <6.0",
    "redis >=5.0.3, <6.0",

    # Kubernetes 集成
    "kubernetes >=29.0.0, <30.0",
    "openshift >=0.13.2, <1.0",

    # Ansible 运行时
    "ansible-core >=2.16.5, <3.0",
    "ansible-runner >=2.4.0, <3.0",
    "kubernetes.core >=2.4.0, <3.0",

    # 安全与认证
    "python-jose[cryptography] >=3.3.0, <4.0",
    "bcrypt >=4.1.2, <5.0",

    # 工具类
    "loguru >=0.7.2, <1.0",
    "pyyaml >=6.0.1, <7.0"
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0.2, <9.0",
    "pytest-asyncio >=0.23.5, <1.0",
    "pytest-cov >=4.1.0, <5.0",
    "responses >=0.24.1, <1.0",
    "mypy >=1.8.0, <2.0",
    "types-pyyaml >=6.0.12.12"
]

monitoring = [
    "flower >=2.0.1, <3.0",
    "prometheus-client >=0.20.0, <1.0"
]

[build-system]
requires = ["setuptools >=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/ansible-k8s-api"
Documentation = "https://github.com/yourusername/ansible-k8s-api/docs"
Repository = "https://github.com/yourusername/ansible-k8s-api"

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --asyncio-mode=auto"
testpaths = ["tests"]
asyncio_mode = "auto"